# jsonl-algebra

./: .coverage  .gitignore  404.html  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_QUICKSTART.md  DEVELOPMENT.md  DOCS_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  JA_SHELL_README.md  JSONPATH_DESIGN.md  Makefile  PROJECT_MANAGEMENT.md  README.md  STREAMING_ANALYSIS.md  TESTING_STRATEGY.md  TEST_FINDINGS.md  bump_version.py  coverage.xml  demo_fluid_api.py  deploy-to-hugo.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  sitemap.xml  test_data1.jsonl
.github/workflows/: ci.yml  docs.yml  test.yml
DOCUMENTATION_SUMMARY/: index.html
advanced/repl/: index.html
chained-groups/: index.html
changelog/: index.html
cli/overview/: index.html
concepts/all-i-kept/: index.html
concepts/chained-groups/: index.html
concepts/jsonl-algebra/: index.html
contributing/: index.html
cookbook/log-analysis/: index.html
docs/: DOCUMENTATION_SUMMARY.md  chained-groups.md  changelog.md  contributing.md  faq.md  future-plans.md  getting-started.md  index.md  quick-reference.md  quickstart.md  reference.md
docs/advanced/: repl.md
docs/api/: core.md  groupby.md  jsonpath.md  streaming.md
docs/cli/: overview.md
docs/concepts/: all-i-kept.md  chained-groups.md  jsonl-algebra.md
docs/cookbook/: log-analysis.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guide/repl/: datasets.md  introduction.md  operations.md
docs/integrations/: overview.md
docs/operations/: overview.md
docs/shell/: introduction.md
docs/tools/: dataset-generator.md
docs/tutorials/: data-analysis.md
examples/: README.md  companies.jsonl  people.jsonl  simple_streaming_test.py  streaming_comprehensive_demo.py  streaming_demo.py  test_streaming_warnings.py  test_windowed_processing.py
faq/: index.html
future-plans/: index.html
getting-started/: index.html
getting-started/concepts/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/repl/datasets/: index.html
guide/repl/introduction/: index.html
guide/repl/operations/: index.html
integrations/: MCP_README.md  README.md  data_explorer.py  log_analyzer.py  mcp_config.json  mcp_server.py  ml_pipeline.py  setup_mcp.sh  test_mcp_minimal.py
integrations/overview/: index.html
ja/: __init__.py  agg.py  cli.py  commands.py  compose.py  core.py  export.py  exporter.py  expr.py  fluid.py  group.py  groupby.py  importer.py  jsonpath.py  relation.py  repl.py  schema.py  shell.py  streaming.py  vfs.py  window.py
operations/overview/: index.html
paper/: Makefile  README.md  main.tex
paper/html_paper/: index.html
quickstart/: index.html
reference/: index.html
scripts/: README.md  __init__.py  generate_dataset.py
search/: search_index.json
shell/introduction/: index.html
stylesheets/: extra.css
test_data/: README.md  companies.jsonl  nested-names.jsonl  orders.jsonl  people.jsonl  temp_union.jsonl  test_data2.jsonl  users-nested.jsonl  users.jsonl
test_data/json_files/: item-0.json  item-1.json  item-2.json  item-3.json  item-4.json  item-5.json  item-6.json  item-7.json  item-8.json  item-9.json
tests/: .coverage  test_cli.py  test_cli_integration.py.disabled  test_commands.py  test_commands_extended.py  test_compose.py  test_core.py  test_core_enhanced.py  test_dataset_integration.py  test_export.py  test_exporter.py  test_expr_eval.py  test_fluid_api.py  test_groupby.py  test_groupby_extended.py  test_importer.py  test_integration.py  test_jsonpath.py  test_mcp_server.py  test_schema.py  test_streaming.py  test_streaming_extended.py  test_utils.py  test_window.py
tools/dataset-generator/: index.html
tutorials/data-analysis/: index.html
