[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonl-algebra"
version = "0.81"
description = "A lightweight relational algebra CLI over JSONL"
readme = "README.md"
authors = [{ name = "Alex Towell", email = "lex@metafunctor.com" }]
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["jmespath"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Topic :: Text Processing :: Filters",
]

[project.scripts]
ja = "ja.cli:main"

[tool.setuptools]
packages = ["ja"]
# No need for license-files here if specified under [project]

[project.urls]
"Homepage" = "https://queelius.github.io/jsonl-algebra"
"Documentation" = "https://queelius.github.io/jsonl-algebra"
"Source" = "https://github.com/queelius/jsonl-algebra"
