[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonl-algebra"
version = "0.8"
description = "A lightweight relational algebra CLI over JSONL"
readme = "README.md"
authors = [{ name = "Alex Towell" }]
requires-python = ">=3.8"
license = { file = "LICENSE" }

dependencies = []

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Topic :: Text Processing :: Filters",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xvfb>=2.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
    "wheel>=0.40.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xvfb>=2.0.0",
]

[project.scripts]
ja = "ja.cli:main"

[tool.setuptools]
packages = ["ja"]

[project.urls]
"Homepage" = "https://queelius.github.io/jsonl-algebra"
"Documentation" = "https://queelius.github.io/jsonl-algebra"
"Source" = "https://github.com/queelius/jsonl-algebra"
